fix hover on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,10 +67,6 @@
   box-shadow: 2px 2px 0 var(--accent-color);
 }
 
-.button:hover::before {
-  transform: scale(1,1);
-}
-
 
 /* HEADER STYLES */
 
@@ -136,11 +132,6 @@
   opacity: 0.6;
   pointer-events: none;
 }
-
-.theme-menu__button:hover {
-  opacity: 0.6;
-}
-
 .theme-menu__button:focus {
   outline: none;
 }
@@ -299,16 +290,6 @@
   transition: fill 0.3s linear;
 }
 
-.like-icon:hover .core {
-  fill: var(--accent-color);
-  transition: fill 0.3s linear;
-}
-
-.like-icon:hover .main-body {
-  fill: var(--accent-color);
-  transition: fill 0.3s 0.05s linear;
-}
-
 .like-icon:active .core {
   fill: var(--heart-fill-color);
   transition: fill 0.3s linear;
@@ -410,6 +391,58 @@ dialog::backdrop {
   height: 38px;
 }
 
+@media ((hover:hover) and (pointer:fine)) {
+  .button:hover::before {
+    transform: scale(1,1);
+  }
+
+  .theme-menu__button:hover {
+    opacity: 0.6;
+  }
+
+  .like-icon:hover .core {
+    fill: var(--accent-color);
+    transition: fill 0.3s linear;
+  }
+
+  .like-icon:hover .main-body {
+    fill: var(--accent-color);
+    transition: fill 0.3s 0.05s linear;
+  }
+
+  .like-icon:active .core {
+    fill: var(--heart-fill-color);
+    transition: fill 0.3s linear;
+  }
+
+  .like-icon:active .main-body {
+    fill: var(--heart-fill-color);
+    transition: fill 0.3s 0.05s linear;
+  }
+
+  .like-icon.is-liked .core {
+    fill: var(--heart-fill-color);
+    transition: fill 0.3s linear;
+  }
+
+  .like-icon.is-liked .main-body {
+    fill: var(--heart-fill-color);
+    transition: fill 0.3s 0.05s linear;
+  }
+
+  .like-icon.is-liked .contour {
+    fill: var(--heart-fill-color);
+    transition: fill 0.3s 0.06s linear;
+  }
+
+  .like-icon.is-liked .heart {
+    animation: heart-scale 0.3s 0.1s ease-in alternate;
+  }
+
+  .like-icon.is-liked .sparks {
+    animation: sparks 0.3s 0.3s ease-in alternate;
+  }
+}
 
 @media (width <= 375px) {
   .save-button {
